Barra de opciones y segunda pantalla avance con scaffold

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Tienda mascotas</string>
     <string name="title_activity_pantalla_no2">PantallaNo2</string>
     <string name="title_activity_pantalla_principal2">PantallaPrincipal2</string>
+    <string name="title_activity_pantalla_icono">PantallaIcono</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
