--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_list">ListActivity</string>
+    <string name="title_activity_accesorios">ActivityAccesorios</string>
+    <string name="title_activity_comidas">ActivityComidas</string>
+    <string name="title_activity_mascotas">ActivityMascotas</string>
 </resources>
